--- a/antismash/outputs/html/css/secmet.less
+++ b/antismash/outputs/html/css/secmet.less
@@ -5,6 +5,10 @@
     a, a:link, a:visited {
         color: @fg;
     }
+    rect& {
+        fill: @bg;
+        stroke: @highlight;
+    }
     &.active {
         border-color: @highlight;
         border-width: 2px;
