output/html: Use the actual locus tag and protein ID in CDS details
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/templates/cds_detail.html
+++ b/antismash/outputs/html/templates/cds_detail.html
@@ -4,8 +4,8 @@
   {{feature.product}}<br>
  {% endif %}
  <br>
- Locus-tag: feature.locus_tag<br>
- Protein-ID: feature.protein_id<br>
+ Locus tag: {{feature.locus_tag}}<br>
+ Protein ID: {{feature.protein_id}}<br>
  {% if ec_numbers %}
   EC-Number(s): {{ec_numbers}}<br>
  {% endif %}
