html: fix broken link for CDS MiBIG hits

--- a/antismash/outputs/html/templates/cds_detail.html
+++ b/antismash/outputs/html/templates/cds_detail.html
@@ -43,7 +43,7 @@
  <a href="{{urls['blastp']}}" target="_new">NCBI BlastP on this gene</a><br>
  <a href="{{urls['context']}}" target="_new">View genomic context</a><br>
  {% if urls['mibig'] %}
-  <a href="{{urls['mibig']}} target="_new">MiBIG Hits</a><br>
+  <a href="{{urls['mibig']}}" target="_new">MiBIG Hits</a><br>
  {% endif %}
  {% if urls['transport'] %}
   <a href="{{urls['transport']}}" target="_new">TransportDB BLAST on this gene</a><br>
