html: fix copy to clipboard functionality

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -25,7 +25,7 @@ body {
     padding: 0;
 }
 
-a {
+a, .clipboard-copy {
     text-decoration: none;
     background-color: #eee;
     border-radius: 2px;
