outputs/html: Add OpenGraph/Twitter card metatags
This gives nicer previews of pasted antiSMASH URLs on Facebook, Twitter, Slack, et al.

Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -130,6 +130,12 @@ nav {
             }
         }
     }
+    & .custom-description {
+        font-size: 90%;
+        padding-top: 15px;
+        line-height: 200%;
+    }
+
 }
 
 .footer {
