--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -245,6 +245,17 @@ nav {
     }
 }
 
+.no-results {
+    text-align: center;
+    padding: 1em 0;
+    font-weight: bold;
+    background-image: linear-gradient(to bottom, #e8e8e8 0, #f5f5f5 100%);
+    background-repeat: repeat-x;
+    border-color: #dcdcdc;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 3px rgba(0,0,0,0.05),0 1px 0 rgba(255,255,255,0.1);
+}
+
 .focus-panel {
     display: block;
     border-left: 2px solid @antismash-main;
