html: move templates to their own directory and name them appropriately

--- a/antismash/outputs/html/templates/overview.html
+++ b/antismash/outputs/html/templates/overview.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div id="header">
-    {% include 'top_header.html' %}
+    {% include 'header.html' %}
     <div id="buttons">
       <span id="region-type">Select genomic region:</span>
       <ul id="regionbuttons">
@@ -125,7 +125,7 @@
   </div>
   {% endif %}
 
-{% include 'jnj_generator.html' %}
+{% include 'regions.html' %}
 {% include 'footer.html' %}
 
   <script src="js/jquery.js"></script>
