html: add some padding around NRPS/PKS domain svg

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -656,6 +656,10 @@ table {
     padding-bottom: 0.5em;
 }
 
+.details-svg {
+    margin: 0 2%;
+}
+
 .jsdomain-line {
     stroke-width: 1px;
     stroke: #888;
