--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -848,3 +848,53 @@ ul.dropdown-options {
 }
 
 
+.switch-container {
+    & span.switch-desc {
+        padding-right: 0.5em;
+    }
+
+    & .switch {
+      position: relative;
+      display: inline-block;
+      width: 2.5em;
+      height: 1.5em;
+    }
+
+    & .switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    & .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      transition: .4s;
+      border-radius: 1.5em;
+    }
+
+    & .slider:before {
+      position: absolute;
+      content: "";
+      height: 80%;
+      width: 50%;
+      left: 10%;
+      bottom: 10%;
+      background-color: white;
+      transition: .2s;
+      border-radius: 50%;
+    }
+
+    & input:checked + .slider {
+      background-color: @antismash-main;
+    }
+
+    & input:checked + .slider:before {
+      transform: translateX(60%);
+    }
+}
