html: move styling from HTML to CSS files

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -862,6 +862,11 @@ ul.dropdown-options {
     }
 }
 
+.nrps-pks-domain-buttons {
+    display: flex;
+    justify-content: space-around;
+}
+
 .switch-container {
     & span.switch-desc {
         padding-right: 0.5em;
@@ -958,4 +963,21 @@ ul.dropdown-options {
 
         .unselectable();
     }
+}
+
+.focus-panel-content {
+    margin-left: 2em;
+    margin-right: 2em;
+    font-size: 0.8em;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 95%;
+}
+
+.region-grid {
+    display: grid;
+    grid-template-columns: auto 25%;
+    grid-gap: 1px;
 }
