nrps_pks, html: fix scaling issues in product html

--- a/antismash/modules/nrps_pks/templates/products.html
+++ b/antismash/modules/nrps_pks/templates/products.html
@@ -14,7 +14,7 @@
             </div>
           {% endif %}
           {% if supercluster.polymer %}
-            <div class="prediction-text">
+            <div>
               <dl>
                 <dt><b>Polymer prediction:</b></dt><dd>{{supercluster.polymer}}</dd>
               </dl>
