--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -285,6 +285,33 @@ nav {
     height: auto;
 }
 
+.modal-container {
+    display: none;
+    position: absolute;
+    z-index: 2; /* keep on top of any open help tooltips */
+    padding-top: 5%;
+    padding-left: 10%;
+    padding-bottom: 100%;
+    left: 0;
+    top: 0;
+    width: 90%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+
+    .modal-content {
+        position: relative;
+    }
+
+    .smiles-canvas-modal {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        height: 80%;
+        width: 80%;
+    }
+}
+
 .structure-link {
     display: inline-block;
     text-align: center;
