html: change domain orf labels to use a grey instead of colours

--- a/antismash/outputs/html/css/style.less
+++ b/antismash/outputs/html/css/style.less
@@ -694,7 +694,7 @@ table {
     stroke: #888;
 }
 .jsdomain-orflabel {
-    fill: @antismash-main;
+    fill: #444;
 }
 .jsdomain-tooltip {
     .tooltip
